Introduce concept of USER.md and improve the sidebar ui/ux
